--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Israt Jahan kathamoni (2020586)</title>
+    <title>Israt Jahan kathamoni </title>
 
     <!------google fornt-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
